--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Puzzle test</title>
-	</head>
-	<body>
-		<!-- Do not edit any html in the body tag -->
-		<figure class="puzzle-figure">
-			<ul class="puzzle">
-				<li class="tile">1</li>
-				<li class="tile">2</li>
-				<li class="tile">3</li>
-				<li class="tile">4</li>
-				<li class="tile">5</li>
-				<li class="tile">6</li>
-				<li class="tile">7</li>
-				<li class="tile">8</li>
-			</ul>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Puzzle test</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js"></script>
+  </head>
+  <body>
+    <!-- Do not edit any html in the body tag -->
+    <figure class="puzzle-figure">
+      <ul class="puzzle">
+        <li class="tile">1</li>
+        <li class="tile">2</li>
+        <li class="tile">3</li>
+        <li class="tile">4</li>
+        <li class="tile">5</li>
+        <li class="tile">6</li>
+        <li class="tile">7</li>
+        <li class="tile">8</li>
+      </ul>
 
-			<figcaption>A Puzzle</figcaption>
-		</figure>
-	</body>
+      <figcaption>A Puzzle</figcaption>
+    </figure>
+  </body>
 </html>
