add slider.js and slider.css

--- a/slider/index.html
+++ b/slider/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Slider test</title>
+    <link rel="stylesheet" href="slider.css" />
+    <script src="slider.js"></script>
     <style>
       html {
         overflow: hidden;
@@ -34,5 +36,8 @@
       <div>Page2</div>
       <div>Page3</div>
     </div>
+    <script>
+      new Slider('#slider', {});
+    </script>
   </body>
 </html>
