--- a/slider/index.html
+++ b/slider/index.html
@@ -20,7 +20,7 @@
       #slider {
         width: 100%;
         height: 100%;
-        background-color: green;
+        border: 1px solid;
       }
       @media (min-width: 768px) {
         #slider {
@@ -28,16 +28,56 @@
           max-height: 800px;
         }
       }
+
+      .slider__item > div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 50%;
+      }
+      .description {
+        color: #888;
+      }
+      .page1 .bottom {
+        background: linear-gradient(90deg, #6b2abb, #42e7fc);
+      }
+      .page2 .bottom {
+        background: linear-gradient(90deg, #42e7fc, #f5f623);
+      }
+      .page3 .bottom {
+        background: linear-gradient(90deg, #f5f623, #f82c82);
+      }
     </style>
   </head>
+
   <body>
     <div id="slider">
-      <div>Page1</div>
-      <div>Page2</div>
-      <div>Page3</div>
+      <div class="page1">
+        <div>
+          <h1 class="title">Gradients</h1>
+          <p class="description">Start, end, angle</p>
+        </div>
+        <div class="bottom"></div>
+      </div>
+      <div class="page2">
+        <div>
+          <h1 class="title">Presets</h1>
+          <p class="description">Manager presets</p>
+        </div>
+        <div class="bottom"></div>
+      </div>
+      <div class="page3">
+        <div>
+          <h1 class="title">Colors</h1>
+          <p class="description">Pick any color</p>
+        </div>
+        <div class="bottom"></div>
+      </div>
     </div>
+
     <script>
-      new Slider('#slider', {});
+      new Slider('#slider');
     </script>
   </body>
 </html>
